# nes-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/nesemulator/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/nesemulator/: MainActivity.kt
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_nes_round.xml
android/app/src/main/res/values/: ic_launcher_nes_background.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/nesemulator/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
include/core/: bus.h  cartridge.h  constants.h  controller.h  ines.h  mapper.h  palette.h  processor2A03.h  processor2C02.h  processor2C02Registers.h  processor6502.h  serializable.h
include/core/audio/: circularBuffer.h  dmcChannel.h  enveloppe.h  noiseChannel.h  pulseChannel.h  triangleChannel.h
include/core/mappers/: all_mappers.h  mapper_000.h  mapper_001.h  mapper_002.h  mapper_003.h  mapper_004.h  mapper_040.h  mapper_066.h
include/core/utils/: busVisitor.h  disassembly.h  fileVisitor.h  memoryVisitor.h  sha1.h  utils.h  vectorVisitor.h  visitor.h
include/exe/: qtController.h  utils.h
include/exe/windows/: debugWidget.h  disassemblyWidget.h  mainWindow.h  oamWidget.h  paletteWidget.h  renderWidget.h
include/new_exe/: controller.h  imguiManager.h  mainWindow.h  screen.h  utils.h  window.h
include/new_exe/audio/: audioSystem.h  nesAudioSystem.h
include/new_exe/imguiWindows/: findRomsWindow.h  imguiWindow.h
include/new_exe/messageService/: audioMessageService.h  coreMessageService.h  message.h  messageService.h  screenMessageService.h
include/new_exe/messageService/messages/: audioMessage.h  audioPayload.h  coreMessage.h  corePayload.h  debugMessage.h  debugPayload.h  screenMessage.h  screenPayload.h
include/new_exe/rendering/: defaultShadersPrg.h  image.h  shaders.h
include/new_exe/windows/: nameTableWindow.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  bus.cpp  cartridge.cpp  imgui.ini  processor2A03.cpp  processor2C02.cpp  processor6502.cpp
src/core/audio/: dmcChannel.cpp  enveloppe.cpp  noiseChannel.cpp  pulseChannel.cpp  triangleChannel.cpp
src/core/mappers/: mapper_000.cpp  mapper_001.cpp  mapper_002.cpp  mapper_003.cpp  mapper_004.cpp  mapper_040.cpp  mapper_066.cpp
src/core/utils/: busVisitor.cpp  disassembly.cpp  fileVisitor.cpp  memoryVisitor.cpp  sha1.cpp  vectorVisitor.cpp
src/exe/: CMakeLists.txt  main.cpp  qtController.cpp
src/exe/windows/: debugWidget.cpp  disassemblyWidget.cpp  mainWindow.cpp  oamWidget.cpp  paletteWidget.cpp  renderWidget.cpp
src/new_exe/: CMakeLists.txt  controller.cpp  imguiManager.cpp  main.cpp  mainWindow.cpp  screen.cpp  window.cpp
src/new_exe/audio/: audioSystem.cpp  nesAudioSystem.cpp
src/new_exe/imguiWindows/: findRomsWindow.cpp  imguiWindow.cpp
src/new_exe/messageService/: audioMessageService.cpp  coreMessageService.cpp  messageService.cpp  screenMessageService.cpp
src/new_exe/rendering/: image.cpp  shader.cpp
src/new_exe/windows/: nameTableWindow.cpp
tests/: CMakeLists.txt
tests/scripts/: compare_logs.py
